--- a/pages/guadalcanal.html
+++ b/pages/guadalcanal.html
@@ -34,7 +34,9 @@
                         muggy. This meant soldiers got infections and sickness due to wet clothing. Dehydration was also
                         a huge problem since the water was also limited, soldiers typically rationed out the water they
                         had so it lasted for the duration of their mission. One specific battle fought in the jungle
-                        terrain was the Battle of Guadalcanal. Guadalcanal is located in the <a href="https://www.google.com/maps/place/Solomon+Islands/@-9.2645286,152.5271508,5z/data=!3m1!4b1!4m5!3m4!1s0x68d351e0555009d1:0xb44cc0a017442980!8m2!3d-9.64571!4d160.156194">Solomon Islands</a>.
+                        terrain was the Battle of Guadalcanal. Guadalcanal is located in the <a
+                            href="https://www.google.com/maps/place/Solomon+Islands/@-9.2645286,152.5271508,5z/data=!3m1!4b1!4m5!3m4!1s0x68d351e0555009d1:0xb44cc0a017442980!8m2!3d-9.64571!4d160.156194">Solomon
+                            Islands</a>.
                         Guadalcanal was of course a jungle region and had an area of about 2,500 miles.
 
                     </p>
@@ -48,12 +50,53 @@
                         sense that it was a surprise attack on Japan. This attack was also the first time the allied
                         powers won a battle in the Pacific which shaped the rest of the war. The Japanese were able to
                         rebound quickly and by August 9th, 3 US destroyers were sunk by the Japanese. This was known as
-                        the Battle of Savo Island. Over the course of the next 3 months, there were many battles fought
+                        the <a href="https://www.history.navy.mil/browse-by-topic/wars-conflicts-and-operations/world-war-ii/1942/guadalcanal/battle-of-savo-island.html">Battle of Savo Island. </a> Over the course of the next 3 months, there were many battles fought
                         in the area of Guadalcanal. Both sides took many losses and eventually withdrew soldiers and
                         battle vessels like destroyers and aircraft carriers. The area calmed down.
                     </p>
+                    <p class="text-justify">
+                        The ending of the Guadalcanal Campaign began in mid-November of 1942. Both the US and Japan
+                        decided to reenter the area at roughly the same time, the United States had a bit of an
+                        advantage. Upon spotting the entrance of the Japanese, the US sent destroyers to protect
+                        valuable cargo and deflect them. The Japanese were still strong and put up a good fight, but the
+                        battle ended in the favor of the United States. As with the other times, there were other small
+                        battles fought during this main one. many of which occurred on land to secure places like
+                        airfields. The US sent in more reinforcements that by December, the battles were winding down.
+                        By the new year, about in February, much of the Japanese still stationed on the island were
+                        evacuated and Guadalcanal was finally in control by the Allies.
+
+                    </p>
+                    <p class="text-justify">
+                        During these 6 months, the Japanese lost a lot more soldiers than the US. Around 24,000 Japanese
+                        soldiers sadly lost their lives. Around 1,600 Americans lost their lives as well, and about
+                        4,000 were wounded. Not only was there a loss of life, but both sides also lost many
+                        battleships, submarines, and other naval vessels.
+
+
+
+                    </p>
+                    <figure class="figure">
+                        <img class="img-fluid"
+                            src="https://cdn.britannica.com/s:690x388,c:crop/60/11360-050-B2D9DDAD/marines-Guadalcanal-land-offensive-theater-World-War-August-1942.jpg" />
+                        <figcaption class="figure-caption">Marines in Guadalcanal World War II August 1942, <a
+                                href="https://cdn.britannica.com/s:690x388,c:crop/60/11360-050-B2D9DDAD/marines-Guadalcanal-land-offensive-theater-World-War-August-1942.jpg">Britannica</a>
+                        </figcaption>
+                    </figure>
+
                 </div>
             </div>
+            <div class="row justify-content-center">
+                <h5>Sources:</h5> <br>
+            </div>
+            <div class="row justify-content-center">
+                <a href="https://www.britannica.com/event/Battle-of-Guadalcanal">The Battle of Guadalcanal</a>
+
+            </div>
+            <div class="row justify-content-center">
+                <a href="http://www.ibiblio.org/hyperwar/USMC/I/USMC-I-VI-2.html">World War II Timeline Article, Guadalcanal</a>
+
+            </div>
+          
         </div>
     </section>
 </body>
