--- a/index.html
+++ b/index.html
@@ -25,21 +25,26 @@
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col text-center">
-                    Above is the iconic photo taken at the Battle of Iwo Jima on February 23, 1945.
+                    Above is the iconic photo taken at the Battle of Iwo Jima on February 23, 1945. <a href="https://www.nationalww2museum.org/sites/default/files/2017-07/Iwo%20Jima.png">National WWII Museum</a>
                 </div>
             </div>
             <hr>
             <div class="row justify-content-center">
                 <div class="col text-center">
                     <figure>
-                        <img class="img-fluid" src="https://m.media-amazon.com/images/I/51Rxy7W82vL.jpg"/>
-                        <figcaption class="figure-caption">Goodbye, Darkness: A Memoir of the Pacific War,  <a href="https://m.media-amazon.com/images/I/51Rxy7W82vL.jpg">Amazon Media</a></figcaption>
+                        <img class="img-fluid" src="https://m.media-amazon.com/images/I/51Rxy7W82vL.jpg" />
+                        <figcaption class="figure-caption">Goodbye, Darkness: A Memoir of the Pacific War, <a
+                                href="https://m.media-amazon.com/images/I/51Rxy7W82vL.jpg">Amazon Media</a></figcaption>
                     </figure>
                     <p>
-                        The overall theme of this blog came from reading, <u> <a href="https://www.amazon.com/Goodbye-Darkness-Memoir-Pacific-War/dp/0316501115">Goodbye, Darkness: A Memoir of the Pacific War</a></u>, by
-                        William Manchester. This was an excellent book about Manchester's time as a soldier during WWII. The story he tells
-                        truly shows the struggles American soldiers went through during WWII and how it not only affected them then, it left
-                        marks on them for the rest of their lives. 
+                        The overall theme of this blog came from reading, <u> <a
+                                href="https://www.amazon.com/Goodbye-Darkness-Memoir-Pacific-War/dp/0316501115">Goodbye,
+                                Darkness: A Memoir of the Pacific War</a></u>, by
+                        William Manchester. This was an excellent book about Manchester's time as a soldier during WWII.
+                        The story he tells
+                        truly shows the struggles American soldiers went through during WWII and how it not only
+                        affected them then, it left
+                        marks on them for the rest of their lives.
                     </p>
                 </div>
             </div>
@@ -50,7 +55,11 @@
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <img class="card-img mt-4 mb-5" src="./images/pearlharbot.jpg" />
+                    <figure class="figure text-center">
+                        <img class="card-img mt-4" src="./images/pearlharbot.jpg" />
+
+                        <figcaption class="figure-caption text-centers">Battleship Attack Pearl Harbor <a href="https://cdn.britannica.com/81/71381-050-0042470B/battleship-attack-Pearl-Harbor-Japanese-Hawaii-December-7-1941.jpg">Britannica</a></figcaption>
+                    </figure>
                 </div>
                 <div class="col-md-6 text-center">
                     <h1 class="mt-4">Pearl Harbor</h1>
@@ -66,7 +75,11 @@
             <div class="row justify-content-center">
 
                 <div class="col-md-6">
-                    <img class="card-img mt-4 mb-5" src="./images/jungle.jpg" />
+                    <figure class="figure text-center">
+                        <img class="card-img mt-4" src="./images/jungle.jpg" />
+
+                        <figcaption class="figure-caption">Jungle <a href="https://www.macmillandictionary.com/dictionary/british/jungle">macmillanddictionary.com</a></figcaption>
+                    </figure>
                 </div>
                 <div class="col-md-6 text-center">
                     <h1 class="mt-4">Jungle Warfare and the Battle of Guadalcanal</h1>
@@ -82,12 +95,18 @@
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <img class="card-img mt-4 mb-5" src="./images/economy.jpg" />
+                    <figure class="figure text-center">
+                        <img class="card-img mt-4" src="./images/economy.jpg" />
+
+                        <figcaption class="figure-caption">Economy Image <a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fapi.time.com%2Fwp-content%2Fuploads%2F2020%2F01%2Feconomy-recession.jpg&imgrefurl=https%3A%2F%2Ftime.com%2F5758198%2Fstate-economies-shrink-2020%2F&tbnid=Qy525i4lBNAePM&vet=12ahUKEwiH6NKglvLvAhUE9qwKHekMAGoQMygCegUIARCHAQ..i&docid=QCikGUeNRHzmwM&w=2120&h=1414&q=economy&safe=strict&ved=2ahUKEwiH6NKglvLvAhUE9qwKHekMAGoQMygCegUIARCHAQ">Time Magazine</a></figcaption>
+                    </figure>
                 </div>
                 <div class="col-md-6 text-center">
                     <h1 class="mt-4">The Economy, before, during, and after WWII</h1>
-                    <p class="mt-5">Some quick example text to build on the card title and make up the bulk
-                        of the card's content.</p>
+                    <p class="mt-5">
+                        Not only did the US economy change very fast before, during, and after World War Two,
+                        the world economy also saw big changes.
+                    </p>
                 </div>
             </div>
         </div>
@@ -156,7 +175,6 @@
     <footer>
         <div class="container-fluid">
             <div class="row justify-content-center">
-                All image rights are to their respective owners.
 
             </div>
         </div>
